--- a/app/src/main/res/layout/widget_config.xml
+++ b/app/src/main/res/layout/widget_config.xml
@@ -7,11 +7,36 @@
     android:layout_centerHorizontal="true"
     android:layout_margin="@dimen/activity_margin">
 
+    <RelativeLayout
+        android:id="@+id/notes_picker_holder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/activity_margin">
+
+        <com.simplemobiletools.commons.views.MyTextView
+            android:id="@+id/notes_picker_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/normal_margin"
+            android:text="@string/note_shown_widget"/>
+
+        <com.simplemobiletools.commons.views.MyTextView
+            android:id="@+id/notes_picker_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/notes_picker_label"
+            android:background="@drawable/button_background"
+            android:padding="@dimen/normal_margin"
+            android:text="@string/general_note"/>
+
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/notes_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/config_bg_color"
+        android:layout_below="@+id/notes_picker_holder"
         android:layout_marginBottom="@dimen/activity_margin"
         android:background="@null"
         android:gravity="top"
