Set IME_FLAG_NO_PERSONALIZED_LEARNING on note's EditText
Details: https://d.android.com/reference/android/view/inputmethod/EditorInfo.html#IME_FLAG_NO_PERSONALIZED_LEARNING

--- a/app/src/main/res/layout/note_view_static.xml
+++ b/app/src/main/res/layout/note_view_static.xml
@@ -8,6 +8,7 @@
     android:freezesText="true"
     android:gravity="top"
     android:inputType="textCapSentences|textMultiLine"
+    android:imeOptions="flagNoPersonalizedLearning"
     android:padding="@dimen/activity_margin"
     android:scrollbars="vertical"
     android:textCursorDrawable="@null"/>
