--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:configure="com.simplemobiletools.notes.activities.WidgetConfigureActivity"
+    android:configure="com.simplemobiletools.notes.pro.activities.WidgetConfigureActivity"
     android:initialLayout="@layout/widget"
     android:minHeight="110dp"
     android:minResizeHeight="40dp"
