allow creating notes of a new type, Checklist

--- a/app/src/main/res/layout/dialog_new_note.xml
+++ b/app/src/main/res/layout/dialog_new_note.xml
@@ -18,4 +18,13 @@
         android:textCursorDrawable="@null"
         android:textSize="@dimen/normal_text_size"/>
 
+    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
+        android:id="@+id/note_checklist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_margin"
+        android:paddingRight="@dimen/activity_margin"
+        android:paddingBottom="@dimen/activity_margin"
+        android:text="@string/checklist"/>
+
 </LinearLayout>
