adding a FAB at the checklist fragment

--- a/app/src/main/res/layout/fragment_checklist.xml
+++ b/app/src/main/res/layout/fragment_checklist.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.simplemobiletools.commons.views.MyRecyclerView
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/checklist"
+    android:id="@+id/checklist_holder"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clipToPadding="false"
-    android:overScrollMode="never"
-    app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager"/>
+    android:layout_height="match_parent">
+
+    <com.simplemobiletools.commons.views.MyRecyclerView
+        android:id="@+id/checklist_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager"/>
+
+    <com.simplemobiletools.commons.views.MyFloatingActionButton
+        android:id="@+id/checklist_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/activity_margin"
+        android:src="@drawable/ic_plus"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
