--- a/app/src/main/res/layout/dialog_new_checklist_item.xml
+++ b/app/src/main/res/layout/dialog_new_checklist_item.xml
@@ -10,21 +10,12 @@
     android:paddingRight="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/note_title"
+        android:id="@+id/checklist_item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
         android:inputType="textCapSentences"
         android:textCursorDrawable="@null"
         android:textSize="@dimen/normal_text_size"/>
-
-    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-        android:id="@+id/note_checklist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_margin"
-        android:paddingRight="@dimen/activity_margin"
-        android:paddingBottom="@dimen/activity_margin"
-        android:text="@string/checklist"/>
 
 </LinearLayout>
