--- a/app/src/main/res/layout/dialog_rename_note.xml
+++ b/app/src/main/res/layout/dialog_rename_note.xml
@@ -8,7 +8,7 @@
     android:padding="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/note_name"
+        android:id="@+id/note_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
