--- a/app/src/main/res/layout/item_checklist.xml
+++ b/app/src/main/res/layout/item_checklist.xml
@@ -17,6 +17,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/medium_margin"
         android:layout_marginTop="@dimen/medium_margin"
-        android:layout_marginRight="@dimen/medium_margin"/>
+        android:layout_marginRight="@dimen/medium_margin"
+        android:textSize="@dimen/bigger_text_size"/>
 
 </RelativeLayout>
