--- a/app/src/main/res/layout/item_checklist.xml
+++ b/app/src/main/res/layout/item_checklist.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/checklist_holder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="@drawable/selector"
-    android:padding="@dimen/activity_margin">
+    android:foreground="@drawable/selector">
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/checklist_title"
@@ -18,6 +18,18 @@
         android:layout_marginLeft="@dimen/medium_margin"
         android:layout_marginTop="@dimen/medium_margin"
         android:layout_marginRight="@dimen/medium_margin"
-        android:textSize="@dimen/bigger_text_size"/>
+        android:layout_toLeftOf="@+id/checklist_image"
+        android:paddingLeft="@dimen/activity_margin"
+        android:textSize="@dimen/bigger_text_size"
+        tools:text="Butter"/>
+
+    <ImageView
+        android:id="@+id/checklist_image"
+        android:layout_width="@dimen/checklist_image_size"
+        android:layout_height="@dimen/checklist_image_size"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:padding="@dimen/normal_margin"
+        android:src="@drawable/ic_cross_big"/>
 
 </RelativeLayout>
