handle deleting checklist items

--- a/app/src/main/res/layout/fragment_checklist.xml
+++ b/app/src/main/res/layout/fragment_checklist.xml
@@ -9,7 +9,7 @@
     <com.simplemobiletools.commons.views.MyRecyclerView
         android:id="@+id/checklist_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:clipToPadding="false"
         android:overScrollMode="never"
         app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager"/>
