--- a/app/src/main/res/layout/dialog_new_note.xml
+++ b/app/src/main/res/layout/dialog_new_note.xml
@@ -18,13 +18,35 @@
         android:textCursorDrawable="@null"
         android:textSize="@dimen/normal_text_size"/>
 
-    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-        android:id="@+id/note_checklist"
+    <com.simplemobiletools.commons.views.MyTextView
+        android:id="@+id/new_note_type_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_margin"
-        android:paddingRight="@dimen/activity_margin"
-        android:paddingBottom="@dimen/activity_margin"
-        android:text="@string/checklist"/>
+        android:paddingTop="@dimen/small_margin"
+        android:paddingRight="@dimen/small_margin"
+        android:text="@string/new_note_type"/>
 
+    <RadioGroup
+        android:id="@+id/new_note_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.simplemobiletools.commons.views.MyCompatRadioButton
+            android:id="@+id/type_text_note"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:paddingTop="@dimen/activity_margin"
+            android:paddingBottom="@dimen/activity_margin"
+            android:text="@string/text_note"/>
+
+        <com.simplemobiletools.commons.views.MyCompatRadioButton
+            android:id="@+id/type_checklist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/activity_margin"
+            android:paddingBottom="@dimen/activity_margin"
+            android:text="@string/checklist"/>
+
+    </RadioGroup>
 </LinearLayout>
