use a different view at the widget config screen for checklists

--- a/app/src/main/res/layout/note_view_horiz_scrollable.xml
+++ b/app/src/main/res/layout/note_view_horiz_scrollable.xml
@@ -8,7 +8,7 @@
     android:scrollbars="horizontal">
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/notes_view"
+        android:id="@+id/text_note_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null"
