--- a/app/src/main/res/layout/note_view_static.xml
+++ b/app/src/main/res/layout/note_view_static.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.simplemobiletools.commons.views.MyEditText
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/notes_view"
+    android:id="@+id/text_note_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@null"
