show proper checklist items at the widget config screen

--- a/app/src/main/res/layout/widget_config.xml
+++ b/app/src/main/res/layout/widget_config.xml
@@ -53,6 +53,7 @@
         android:layout_marginBottom="@dimen/activity_margin"
         android:clipToPadding="false"
         android:overScrollMode="never"
+        android:paddingTop="@dimen/small_margin"
         android:visibility="gone"
         app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager"/>
 
