--- a/app/src/main/res/layout/item_checklist_widget.xml
+++ b/app/src/main/res/layout/item_checklist_widget.xml
@@ -8,6 +8,7 @@
     android:layout_centerVertical="true"
     android:layout_marginTop="@dimen/medium_margin"
     android:layout_marginRight="@dimen/medium_margin"
+    android:layout_marginBottom="@dimen/medium_margin"
     android:layout_toLeftOf="@+id/checklist_image"
     android:paddingLeft="@dimen/activity_margin"
     android:textSize="@dimen/bigger_text_size"
