--- a/app/src/main/res/layout/dialog_new_checklist_item.xml
+++ b/app/src/main/res/layout/dialog_new_checklist_item.xml
@@ -10,10 +10,28 @@
     android:paddingRight="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/checklist_item_title"
+        android:id="@+id/checklist_item_title_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_margin"
+        android:layout_marginBottom="@dimen/medium_margin"
+        android:inputType="textCapSentences"
+        android:textCursorDrawable="@null"
+        android:textSize="@dimen/normal_text_size"/>
+
+    <com.simplemobiletools.commons.views.MyEditText
+        android:id="@+id/checklist_item_title_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/medium_margin"
+        android:inputType="textCapSentences"
+        android:textCursorDrawable="@null"
+        android:textSize="@dimen/normal_text_size"/>
+
+    <com.simplemobiletools.commons.views.MyEditText
+        android:id="@+id/checklist_item_title_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/medium_margin"
         android:inputType="textCapSentences"
         android:textCursorDrawable="@null"
         android:textSize="@dimen/normal_text_size"/>
