update commons to 5.16.12

--- a/app/src/main/res/layout/item_checklist.xml
+++ b/app/src/main/res/layout/item_checklist.xml
@@ -30,6 +30,6 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:padding="@dimen/normal_margin"
-        android:src="@drawable/ic_cross_big"/>
+        android:src="@drawable/ic_cross_vector"/>
 
 </RelativeLayout>
