--- a/app/src/main/res/menu/cab_checklist.xml
+++ b/app/src/main/res/menu/cab_checklist.xml
@@ -8,7 +8,7 @@
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/cab_delete"
-        android:icon="@drawable/ic_delete"
+        android:icon="@drawable/ic_delete_vector"
         android:title="@string/delete"
         app:showAsAction="ifRoom"/>
 </menu>
