--- a/app/src/main/res/layout/item_checklist.xml
+++ b/app/src/main/res/layout/item_checklist.xml
@@ -18,18 +18,18 @@
         android:layout_marginLeft="@dimen/medium_margin"
         android:layout_marginTop="@dimen/medium_margin"
         android:layout_marginRight="@dimen/medium_margin"
-        android:layout_toLeftOf="@+id/checklist_image"
-        android:paddingLeft="@dimen/activity_margin"
+        android:layout_toStartOf="@+id/checklist_image"
+        android:paddingStart="@dimen/activity_margin"
         android:textSize="@dimen/bigger_text_size"
-        tools:text="Butter"/>
+        tools:text="Butter" />
 
     <ImageView
         android:id="@+id/checklist_image"
         android:layout_width="@dimen/checklist_image_size"
         android:layout_height="@dimen/checklist_image_size"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:padding="@dimen/normal_margin"
-        android:src="@drawable/ic_cross_vector"/>
+        android:src="@drawable/ic_cross_vector" />
 
 </RelativeLayout>
