--- a/app/src/main/res/layout/dialog_open_note.xml
+++ b/app/src/main/res/layout/dialog_open_note.xml
@@ -9,6 +9,7 @@
         android:id="@+id/dialog_open_note_linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"/>
+        android:layout_marginTop="@dimen/medium_margin"
+        android:orientation="vertical" />
 
 </ScrollView>
