WIP - searching for strings in a given note, then highlighting and looping through the string occurrences with some arrows.

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -17,6 +17,11 @@
         android:title="@string/redo"
         app:showAsAction="ifRoom"/>
     <item
+        android:id="@+id/open_search"
+        android:icon="@drawable/ic_search_vector"
+        android:title="@string/search"
+        app:showAsAction="ifRoom"/>
+    <item
         android:id="@+id/open_note"
         android:icon="@drawable/ic_folder_open_vector"
         android:title="@string/open_note"
