uncheck the file deleting checkbox at removing a synced note

--- a/app/src/main/res/layout/dialog_delete_note.xml
+++ b/app/src/main/res/layout/dialog_delete_note.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_margin"
         android:layout_marginRight="@dimen/activity_margin"
-        android:checked="true"
+        android:checked="false"
         android:paddingBottom="@dimen/small_margin"
         android:paddingLeft="@dimen/activity_margin"
         android:paddingRight="@dimen/activity_margin"
