adding a hint at the main view, if the note is empty

--- a/app/src/main/res/layout/note_view_static.xml
+++ b/app/src/main/res/layout/note_view_static.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@null"
     android:freezesText="true"
+    android:hint="@string/insert_text_here"
     android:gravity="top"
     android:inputType="textCapSentences|textMultiLine"
     android:padding="@dimen/activity_margin"
