--- a/app/src/main/res/layout/fragment_checklist.xml
+++ b/app/src/main/res/layout/fragment_checklist.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/checklist_holder"
     android:layout_width="match_parent"
@@ -18,19 +17,21 @@
             android:clipToPadding="false"
             android:overScrollMode="never"
             android:visibility="gone"
-            app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager"/>
+            app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/fragment_placeholder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_margin"
+            android:alpha="0.8"
             android:gravity="center"
-            android:paddingLeft="@dimen/activity_margin"
-            android:paddingRight="@dimen/activity_margin"
+            android:paddingStart="@dimen/activity_margin"
+            android:paddingEnd="@dimen/activity_margin"
             android:text="@string/checklist_is_empty"
             android:textSize="@dimen/bigger_text_size"
-            android:visibility="gone"/>
+            android:textStyle="italic"
+            android:visibility="gone" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/fragment_placeholder_2"
@@ -43,7 +44,7 @@
             android:padding="@dimen/activity_margin"
             android:text="@string/add_new_checklist_items"
             android:textSize="@dimen/bigger_text_size"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </RelativeLayout>
 
     <com.simplemobiletools.commons.views.MyFloatingActionButton
@@ -52,6 +53,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/activity_margin"
-        android:src="@drawable/ic_plus_vector"/>
+        android:src="@drawable/ic_plus_vector" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
