--- a/app/src/main/res/layout/note_view_horiz_scrollable.xml
+++ b/app/src/main/res/layout/note_view_horiz_scrollable.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.simplemobiletools.notes.pro.views.MyHorizontalScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.simplemobiletools.notes.pro.views.MyHorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/notes_horizontal_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,9 +13,10 @@
         android:background="@null"
         android:freezesText="true"
         android:gravity="top"
+        android:hint="@string/insert_text_here"
         android:inputType="textCapSentences|textMultiLine"
         android:padding="@dimen/activity_margin"
         android:scrollbars="vertical"
-        android:textCursorDrawable="@null"/>
+        android:textCursorDrawable="@null" />
 
 </com.simplemobiletools.notes.pro.views.MyHorizontalScrollView>
